Promene oko dugmeta submit
Promene submit u reset i smanjenje kursora

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -301,7 +301,7 @@ header {
           @extend input;
           resize: vertical;
         }
-        input[type="submit"] {
+        input[type="reset"] {
           position: relative;
           border: 0px;
           background-color: $bgcolor;
